--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                         <i class="lnr lnr-home"></i>
                                     </div>
                                     <h5>Home Address</h5>
-                                    <p>25, 10B,Kamaraj nagar,6th street,Avarampalayam,Coimbatore-6</p>
+                                    <p> 10B,Kamaraj nagar,6th street,Avarampalayam,Coimbatore-6</p>
                                 </div><!-- / feature-block -->
                             </div><!-- / col-md-6 feature-left -->
 
